2013-06-06  Chris Fleizach  <cfleizach@apple.com>

        AX: iOS ignores ARIA progressbar elements
        https://bugs.webkit.org/show_bug.cgi?id=116727

        Reviewed by David Kilzer.

        * DumpRenderTree/ios/AccessibilityUIElementIOS.mm:
        (AccessibilityUIElement::minValue):
        (AccessibilityUIElement::maxValue):

2013-06-06  peavo@outlook.com  <peavo@outlook.com>

        [WinCairo] Fix build-webkit to build WinCairo under VS2010.
        https://bugs.webkit.org/show_bug.cgi?id=117255

        Reviewed by Daniel Bates.

        Need to update configuration names according to solution file.

        * Scripts/webkitdirs.pm:
        (determineConfiguration):
        (determinePassedConfiguration):

2013-06-06  Ryosuke Niwa  <rniwa@webkit.org>

        Remove run-performance-tests
        https://bugs.webkit.org/show_bug.cgi?id=117285

        Reviewed by Andreas Kling.
        
        Remove the script since it's not used anywhere.

        * BuildSlaveSupport/run-performance-tests: Removed.

2013-06-05  Bear Travis  <betravis@adobe.com>

        [CSS Exclusions][CSS Shapes] Split CSS Exclusions & Shapes compile & runtime flags
        https://bugs.webkit.org/show_bug.cgi?id=117172

        Reviewed by Alexandru Chiculita.

        Adding the CSS_SHAPES compile flag.

        * Scripts/webkitperl/FeatureList.pm:
        * qmake/mkspecs/features/features.pri:

2013-06-05  Brent Fulgham  <bfulgham@apple.com>

        [Windows] Unreviewed build fix. Add CRLF eol-style for DOS shell scripts; if they accidentally change
        to UNIX-style they will not execute properly.

        * DumpRenderTree/DumpRenderTree.vcxproj/DumpRenderTree/DumpRenderTreePostBuild.cmd: Added property svn:eol-style.
        * DumpRenderTree/DumpRenderTree.vcxproj/DumpRenderTree/DumpRenderTreePreBuild.cmd: Added property svn:eol-style.

2013-06-05  Roger Fong  <roger_fong@apple.com>
