@@ -1,3 +1,12 @@
+2013-06-06  Hugo Parente Lima  <hugo.lima@openbossa.org>
+
+        Aligning build-webkit command line switch names to the WebKit flag names
+        https://bugs.webkit.org/show_bug.cgi?id=117254
+
+        Reviewed by Laszlo Gombos.
+
+        * Scripts/webkitperl/FeatureList.pm: Rename some command line switches.
+
 2013-06-06  Chris Fleizach  <cfleizach@apple.com>
 
         AX: iOS ignores ARIA progressbar elements
